samples/_failures_safe/1761533782_e8267b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36ef7582.c: In function ‘main’:
./samples/SAFE/__tmp_36ef7582.c:151:5: error: expected ‘,’ or ‘;’ at end of input
  151 |     for (size_t i = 0
      |     ^~~
./samples/SAFE/__tmp_36ef7582.c:151:5: error: expected declaration or statement at end of input
